web_interfaces/openwebui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
spec:
  selector:
    app: openwebui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
